# jaja-jobs

./: README.md  dockerfile  pyproject.toml
jobs/cron/: Dockerfile  README.md  pyproject.toml
jobs/cron/src/: main.py
src/: config.py  main.py
